freat:20251211 상권 추천 메서드 리팩토링